# Project-1

./: .gitignore
backend/: pom.xml
backend/.aiassistant/rules/: 编码规则.md
backend/benchmark/: README.md  Run-HaluMem-OneClick.cmd  Run-HaluMem-OneClick.ps1  Run-LongMemEval-OneClick.cmd  Run-LongMemEval-OneClick.ps1  Run-LongMemEval-S-OneClick.cmd  Run-LongMemEval-S-OneClick.ps1  Start-BenchmarkServer.cmd  Start-BenchmarkServer.ps1  Stop-BenchmarkServer.cmd  Stop-BenchmarkServer.ps1
backend/benchmark/halumem/: Invoke-HaluMemBenchmark.ps1  run_halumem_benchmark.py
backend/benchmark/longmemeval/: Invoke-LongMemEvalRetrieval.ps1  run_longmemeval_retrieval.py
backend/src/main/java/p1/: Application.java
backend/src/main/java/p1/aop/: AiServiceLogAspect.java
backend/src/main/java/p1/config/: AiConfig.java  AssistantProperties.java  AsyncConfig.java  ExternalConfigBootstrap.java  JsonConfig.java  WebConfig.java
backend/src/main/java/p1/controller/: ChatController.java  ChatPageController.java  GamerController.java  McpRegistryController.java  (+1 more)
backend/src/main/resources/: application-benchmark.yaml  application-mcp.yaml  application.yaml  logback.xml  mcp-catalog.yaml
backend/src/test/java/p1/: ApplicationTests.java
chara/Demo/: prompt.txt
docs/: qt-frontend-migration.md
frontend/: index.html
frontend/arklight-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/arklight-frontend/src/: App.vue  ori.html
frontend/arklight-frontend/src/chara/: catalog.ts  library.ts  message-parser.ts  types.ts
frontend/arklight-frontend/src/setting/: BackendSettingsPanel.vue  FrontendSettingsPanel.vue  external-config.ts  frontend-settings.ts  types.ts
frontend/arklight-frontend/src/theme/: ArkLightSettingsShell.vue  ArkLightTheme.vue  PlainWebSettingsShell.vue  PlainWebTheme.vue  StardustField.vue  theme-registry.ts  types.ts
launcher/: CMakeLists.txt  README.md  build.bat
launcher/src/: ArklightLauncher.cpp
packaging/windows/: start-qt.bat  start-web.bat
qt-frontend/: CMakeLists.txt  CMakePresets.json  README.md  build.bat  deploy.bat  run.bat
qt-frontend/qml/: Main.qml
qt-frontend/src/: main.cpp
qt-frontend/src/app/: CharacterCatalog.cpp  CharacterCatalog.h  ChatClient.cpp  ChatClient.h  ChatMessageModel.cpp  ChatMessageModel.h  ChatSessionController.cpp  ChatSessionController.h  FrontendSettings.cpp  FrontendSettings.h  MessageParser.cpp  MessageParser.h
scripts/: package-windows.bat  start-web-dev.bat
(+433 files in other folders)
